# llm_scratch

./: .dockerignore  .gitignore  AGENTS.md  CHECK.md  Dockerfile  Makefile  PHILOSOPHY.md  PROGRESS.md  README.md  ROADMAP.md  inference.ipynb  main.py  pyproject.toml  test_train_tokenizer.py  train_tokenizer.py
.github/: pull_request_template.md
.github/workflows/: network-integration.yml  pr-quality.yml
config/: dgx.yaml  human_evaluation.yaml  stream_loader.yaml  train.yaml  train_tokenizer.yaml
config/profile/: benchmark.yaml  dgx_candidate.yaml  dgx_smoke.yaml  evaluation.yaml  gate_overfit.yaml  pretrain_baseline.yaml  pretrain_streaming.yaml  smoke_overfit.yaml  stability_smoke.yaml
config/tokenizer/: canonical.yaml
data/benchmarks/: suite-v1.json
docs/: agent-model-workflow.md  benchmarks.md  dgx-spark-runtime.md  generation.md  human-evaluation.md  model-provenance.md  operations.md  validation.md  wandb.md
requirements/: runtime.txt
scripts/: build_data_manifest.py  capture_hf_source_manifests.py  capture_model_provenance.py  check_lock_drift.py  check_runtime_requirements.py  config_check.py  cuda_smoke.py  debug_stream_loader.py  diagnose_environment.py  measure_dgx.py  measure_dgx_decomposition.py  offline_smoke.py  preflight_data.py  run_dgx_measurements.py  run_gate_overfit.py  summarize_data_preflights.py  summarize_dgx_measurements.py
src/: benchmark.py  benchmark_external.py  cli.py  evaluate.py  generate.py  human_evaluate.py  operate.py  train.py  train_tokenizer.py
tests/: test_benchmarks.py  test_canonical_tokenizer.py  test_checkpoint.py  test_ci_quality_gate.py  test_cli.py  test_config_profiles.py  test_data003_stream_cursor.py  test_data004_baseline.py  test_data_manifests.py  test_data_preflight.py  test_decoder_only.py  test_dgx_hardware.py  test_dgx_planning.py  test_dgx_runner.py  test_dgx_runtime_image.py  test_dgx_telemetry.py  test_dgx_watchdog_roles.py  test_evaluation.py  test_generation.py  test_human_evaluation_contamination.py  test_human_evaluation_schema.py  test_human_evaluation_workflow.py  test_inspect_wandb_offline.py  test_model_provenance.py  test_operations_artifacts.py  test_operations_e2e.py  test_operations_preflight.py  test_operations_runner.py  test_reproducibility.py  test_runtime.py  test_runtime_requirements.py  test_simple_decoder_transformer.py  test_stream_loader.py  test_streaming_dataset.py  test_tokenizer_comparison.py  test_train_streaming.py  test_trainer.py  test_verify_wb001_dgx.py  test_wandb_tracking.py
(+205 files in other folders)
