[project]
name = "llm-scratch"
version = "0.1.0"
description = "Scratch experiments for a decoder-only autoregressive Transformer and BPE tokenizer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3",
  "numpy>=1.26",
  "torch>=2.2",
  "tqdm>=4.66",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]
