[project]
name = "llm-scratch"
version = "0.1.0"
description = "Scratch experiments for a decoder-only autoregressive Transformer and BPE tokenizer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=5.0.0",
  "hydra-core>=1.3",
  "loguru>=0.7",
  "mistral-common>=1.11.3",
  "numpy>=1.26",
  "tokenizers>=0.22.2",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=5.12.1",
  "wandb>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
notebook = [
  "ipykernel>=6.29",
  "matplotlib>=3.9",
]

[tool.uv]
default-groups = ["notebook"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
