[project]
name = "llm-scratch"
version = "0.1.0"
description = "Scratch experiments for a decoder-only autoregressive Transformer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=5.0.0",
  "hydra-core>=1.3",
  "loguru>=0.7",
  "numpy>=1.26",
  "pyarrow>=18.0.0",
  "tokenizers>=0.22.2",
  "torch>=2.2",
  "tqdm>=4.66",
  "wandb>=0.19",
]

[project.scripts]
llm-scratch-train = "cli:train"
llm-scratch-config-check = "cli:config_check"
llm-scratch-generate = "generate:main"
llm-scratch-evaluate = "cli:evaluate"
llm-scratch-benchmark = "benchmark:main"
llm-scratch-benchmark-final = "benchmark:final_main"
llm-scratch-benchmark-external = "benchmark_external:main"
llm-scratch-human-evaluate = "human_evaluate:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "train", "evaluate", "benchmark", "benchmark_external", "human_evaluate"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
notebook = [
  "ipykernel>=6.29",
  "matplotlib>=3.9",
]

[tool.uv]
default-groups = ["notebook"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
